 * Switch, iter, and env (%0-%9) information are now kept in PE_REGS stack.
   switch, iter, @switch and @dol are no longer limited, but new queue
   entries only keep the last 50 @switch/@dols. [GM]
 * Renamed some variables in COMMAND() definitions for consistency/clarity.
   See HACKING.184 for more info. [MG]
 * Assorted Windows fixes. [SW]

Minor changes:
 * Because switch() and @switch() now store capture data, it can change
   the nesting of $0-$9/$<foo> in rare cases. [GM]
 * All @o* messages are now heard by rooms even when they're empty. Makes
   room @listens and similar things work right. Suggested by Padraic. [MG]
 * @zemit and zemit() will now show the executor the message, if he's in a
   a room on the right zone. Suggested by Paige. [MG]

Locks:
 * objid locks are now turned into =-locks by the lock parser. The clearing
   of references to deleted objects makes objid locks extraneous. [SW]
 * Internal changes to validation of 'name^string' locks to use perfect
   hash tables to validate the name. [SW]
 
Commands:
 * @switch and @switch/regexp set $0-$9 for glob or pattern captures. [GM]
 * @notify/setq can alter Q-registers of a semaphore queue entry before
   dequeueing it. [GM]
 * 'teach' now takes a /list switch, which lets it run an action list
   instead of a single command. [MG]
 * @force, @switch and @hook/override now all take an /inline switch, which
   can be further modified with /clearregs, /localize and /nobreak to run
   their actionlists without queueing (replaces /inplace). @include also
   takes those three switches. See the help for more info. [MG]
 * @retry, which causes a queue entry to restart from the beginning. Useful
   for coding loops without the queue delay. [GM]
   
Substitutions:
 * $<name> for accessing regexp substitutions can now have evaluation inside
   the <>s: $<%qa>. [GM]
 * %q<foo> can access named Q-registers. %q<%qa> can work as a q-register
   dereference. [GM]